Numerous bugfixes and qol changes